override-markdown-styles.css
img {
	max-width: 100%;
	vertical-align: baseline;
} 

h1,h2,h3,h4,h5,h6 { font-weight:600 } 

hr {
	border-top: 1px;
	color: #888;
	margin-top: 8px;
	margin-bottom: 8px
}

blockquote {
	color:#111;
	background-color: #d8d0e7;
	border-left: 4px solid #b59de1;
	padding: 15px;
	font-size:16px;
	letter-spacing:0px;
	font-style:normal
}

.new-to-bnb {
	background-color: #d8d0e7;
}

.page-anchor {
	margin: 0
}

.page-anchor a { color:#888; text-decoration:none } 
.page-anchor a:visited { color:#888 } 
.page-anchor a:hover { color:#888; text-decoration:none } 

.page-number { font-weight:700 }

/* Create two equal columns that floats next to each other */
.column {
  float: left;
  width: 50%;
  padding: 10px;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

.table-of-contents {
	padding-bottom: 15px;
}

.table-of-contents table, .table-of-contents td {
	border: none;
}

.table-of-contents h3, .table-of-contents h4 {
	font-size:14px;
	font-weight:600;
	margin-top: 8px;
	margin-bottom: 0px;
}

.table-of-contents p {
	font-size:12px;
	margin: 0px;
}

.table-of-contents ul {
	list-style-type: none;
}

.float-container {
}

.floating-image {
	vertical-align: top;
	float: left;
	width: 56px;
}

.inline-icon {
	height: 18px;
	vertical-align: -10%;
}

.inline-condition {
	height: 22px;
	vertical-align: -20%;
}

.inline-element {
	height: 20px;
	vertical-align: -15%;
}

